--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-12-11 Wed 19:00 -->
+<!-- 2025-01-07 Tue 19:37 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>HTML Demo &amp; Reference</title>
@@ -43,10 +43,9 @@
 </ul>
 </div>
 </nav>
-
 <div id="outline-container-Text-Decoration" class="outline-2">
 <h2 id="Text-Decoration">Text Decoration</h2>
-<div class="outline-text-2" id="text-orgd722742">
+<div class="outline-text-2" id="text-orgd6e831f">
 <p>
 Words may be <strong>bold</strong>, <em>italic</em>, <span class="underline">underlined</span>, <kbd>verbatim</kbd>, <samp>monospace</samp>, or
 <del>strike-through</del>.
@@ -59,10 +58,9 @@ Words may be <strong>bold</strong>, <em>italic</em>, <span class="underline">und
 </div>
 </div>
 </div>
-
 <div id="outline-container-Images" class="outline-2">
 <h2 id="Images">Images</h2>
-<div class="outline-text-2" id="text-org8e02a78">
+<div class="outline-text-2" id="text-orgcf9a038">
 <div class="org-src-container">
 <pre class="src src-org"><span style="color: #83898d;">#+CAPTION:</span> <span style="background-color: #23272e;">Caption goes here.</span>
 <span style="color: #83898d;">#+ATTR_HTML: :width 100%</span>
@@ -71,17 +69,16 @@ Words may be <strong>bold</strong>, <em>italic</em>, <span class="underline">und
 </div>
 
 
-<figure id="orgdbec728">
+<figure id="org795771c">
 <img src="./img/2015.jpg" alt="2015.jpg" width="100%">
 
 <figcaption><span class="figure-number">Figure 1: </span>Caption goes here.</figcaption>
 </figure>
 </div>
 </div>
-
 <div id="outline-container-Source-Code" class="outline-2">
 <h2 id="Source-Code">Source Code</h2>
-<div class="outline-text-2" id="text-orgf8942d8">
+<div class="outline-text-2" id="text-org3333131">
 <div class="org-src-container">
 <pre class="src src-org"><span style="color: #5B6268; background-color: #23272e;">#+begin_src python</span>
 <span style="color: #51afef; background-color: #23272e;">def</span><span style="background-color: #23272e;"> </span><span style="color: #c678dd; background-color: #23272e;">lazy</span><span style="background-color: #23272e;">(f):</span>
@@ -112,10 +109,9 @@ Output:
 </div>
 </div>
 </div>
-
 <div id="outline-container-Math" class="outline-2">
 <h2 id="Math">Math</h2>
-<div class="outline-text-2" id="text-org30a3c05">
+<div class="outline-text-2" id="text-orgaa4f6db">
 <p>
 Math is rendered <em>server-side</em> using <a href="https://katex.org/"><!--\KaTeX-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mtext>KaTeX</mtext></mrow><annotation encoding="application/x-tex">\KaTeX</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8988em;vertical-align:-0.2155em;"></span><span class="mord text"><span class="mord textrm">K</span><span class="mspace" style="margin-right:-0.17em;"></span><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.6833em;"><span style="top:-2.905em;"><span class="pstrut" style="height:2.7em;"></span><span class="mord"><span class="mord textrm mtight sizing reset-size6 size3">A</span></span></span></span></span></span><span class="mspace" style="margin-right:-0.15em;"></span><span class="mord text"><span class="mord textrm">T</span><span class="mspace" style="margin-right:-0.1667em;"></span><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.4678em;"><span style="top:-2.7845em;"><span class="pstrut" style="height:3em;"></span><span class="mord"><span class="mord textrm">E</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.2155em;"><span></span></span></span></span><span class="mspace" style="margin-right:-0.125em;"></span><span class="mord textrm">X</span></span></span></span></span></span></a>.
@@ -126,8 +122,8 @@ Math is rendered <em>server-side</em> using <a href="https://katex.org/"><!--\Ka
 <span style="color: #51afef; background-color: #23272e;">\begin</span><span style="color: #51afef; background-color: #23272e;">{</span><span style="color: #c678dd; background-color: #23272e;">equation</span><span style="color: #51afef; background-color: #23272e;">}</span>
 <span style="color: #98be65; background-color: #23272e;">\frac</span><span style="color: #51afef; background-color: #23272e;">{</span><span style="color: #98be65; background-color: #23272e;">\partial</span><span style="color: #98be65; background-color: #23272e;"> L</span><span style="color: #51afef; background-color: #23272e;">}{</span><span style="color: #98be65; background-color: #23272e;">\partial</span><span style="color: #98be65; background-color: #23272e;"> </span><span style="color: #98be65; background-color: #23272e;">\phi</span><span style="color: #51afef; background-color: #23272e;">}</span>
 <span style="color: #98be65; background-color: #23272e;">-</span><span style="color: #98be65; background-color: #23272e;"> </span><span style="color: #98be65; background-color: #23272e;">\sum</span><span style="color: #2257A0; background-color: #23272e;">_</span><span style="color: #98be65; background-color: #23272e; font-size: 85%;">\mu</span><span style="color: #98be65; background-color: #23272e;"> </span><span style="color: #98be65; background-color: #23272e;">\partial</span><span style="color: #2257A0; background-color: #23272e;">_</span><span style="color: #98be65; background-color: #23272e; font-size: 85%;">\mu</span>
-<span style="color: #98be65; background-color: #23272e;">\bigg</span><span style="color: #98be65; background-color: #23272e;">( </span><span style="color: #98be65; background-color: #23272e;">\frac</span><span style="color: #51afef; background-color: #23272e;">{</span><span style="color: #98be65; background-color: #23272e;">\partial</span><span style="color: #98be65; background-color: #23272e;"> L</span><span style="color: #51afef; background-color: #23272e;">}{</span><span style="color: #98be65; background-color: #23272e;">\partial</span><span style="color: #98be65; background-color: #23272e;"> (</span><span style="color: #98be65; background-color: #23272e;">\partial</span><span style="color: #2257A0; background-color: #23272e;">_</span><span style="color: #98be65; background-color: #23272e; font-size: 85%;">\mu</span><span style="color: #98be65; background-color: #23272e;"> </span><span style="color: #98be65; background-color: #23272e;">\phi</span><span style="color: #98be65; background-color: #23272e;">)</span><span style="color: #51afef; background-color: #23272e;">}</span><span style="color: #ff6c6b; background-color: #23272e; font-weight: bold;">}</span><span style="color: #98be65; background-color: #23272e;">\bigg</span><span style="color: #98be65; background-color: #23272e;">) = 0</span>
-<span style="color: #51afef; background-color: #23272e;">\end</span><span style="color: #ff6c6b; background-color: #23272e; font-weight: bold;">{</span><span style="color: #c678dd; background-color: #23272e;">equation</span><span style="color: #ff6c6b; background-color: #23272e; font-weight: bold;">}</span>
+<span style="color: #98be65; background-color: #23272e;">\bigg</span><span style="color: #98be65; background-color: #23272e;">( </span><span style="color: #98be65; background-color: #23272e;">\frac</span><span style="color: #51afef; background-color: #23272e;">{</span><span style="color: #98be65; background-color: #23272e;">\partial</span><span style="color: #98be65; background-color: #23272e;"> L</span><span style="color: #51afef; background-color: #23272e;">}{</span><span style="color: #98be65; background-color: #23272e;">\partial</span><span style="color: #98be65; background-color: #23272e;"> (</span><span style="color: #98be65; background-color: #23272e;">\partial</span><span style="color: #2257A0; background-color: #23272e;">_</span><span style="color: #98be65; background-color: #23272e; font-size: 85%;">\mu</span><span style="color: #98be65; background-color: #23272e;"> </span><span style="color: #98be65; background-color: #23272e;">\phi</span><span style="color: #98be65; background-color: #23272e;">)</span><span style="color: #51afef; background-color: #23272e;">}</span><span style="color: #98be65; background-color: #23272e;"> </span><span style="color: #98be65; background-color: #23272e;">\bigg</span><span style="color: #98be65; background-color: #23272e;">) = 0</span>
+<span style="color: #51afef; background-color: #23272e;">\end</span><span style="color: #51afef; background-color: #23272e;">{</span><span style="color: #c678dd; background-color: #23272e;">equation</span><span style="color: #51afef; background-color: #23272e;">}</span>
 </pre>
 </div>
 
@@ -171,10 +167,9 @@ value <!--\phi-->
 </p>
 </div>
 </div>
-
 <div id="outline-container-Internal-Links" class="outline-2">
 <h2 id="Internal-Links">Internal Links</h2>
-<div class="outline-text-2" id="text-org5be3f18">
+<div class="outline-text-2" id="text-org492cd74">
 <p>
 Standard internal link:
 </p>
@@ -198,10 +193,9 @@ Using general link syntax:
 </p>
 </div>
 </div>
-
 <div id="outline-container-Wikipedia-Links" class="outline-2">
 <h2 id="Wikipedia-Links">Wikipedia Links</h2>
-<div class="outline-text-2" id="text-org58b0e40">
+<div class="outline-text-2" id="text-org1658526">
 <div class="org-src-container">
 <pre class="src src-org">Links to [&#8203;[ht&#8203;tps://en.wikipedia.org/wiki/Wikipedia][Wikipedia]] pages will
 display summaries when hovered over.
@@ -213,10 +207,9 @@ Links to <a href="https://en.wikipedia.org/wiki/Wikipedia">Wikipedia</a> pages w
 </p>
 </div>
 </div>
-
 <div id="outline-container-Foot-notes" class="outline-2">
 <h2 id="Foot-notes">Foot​notes</h2>
-<div class="outline-text-2" id="text-org5a09ea2">
+<div class="outline-text-2" id="text-org3d4b73d">
 <div class="org-src-container">
 <pre class="src src-org">Sometimes you don't need footnotes...<span style="color: #da8548;">[fn:1]</span>
 
@@ -239,10 +232,9 @@ definition or headline, or after two consecutive empty lines (<a href="https://o
 </p>
 </div>
 </div>
-
 <div id="outline-container-Block-Quotes" class="outline-2">
 <h2 id="Block-Quotes">Block Quotes</h2>
-<div class="outline-text-2" id="text-org8d64e55">
+<div class="outline-text-2" id="text-org899cdab">
 <div class="org-src-container">
 <pre class="src src-org"><span style="color: #5B6268; background-color: #23272e;">#+begin_quote</span>
 <span style="background-color: #23272e; font-style: italic;">There was only one catch and that was Catch-22, which specified that a concern</span>
@@ -271,10 +263,9 @@ would have to fly more missions.
 </blockquote>
 </div>
 </div>
-
 <div id="outline-container-Tables" class="outline-2">
 <h2 id="Tables">Tables</h2>
-<div class="outline-text-2" id="text-org451cf92">
+<div class="outline-text-2" id="text-org01e01ae">
 <p>
 I don&rsquo;t use org-mode for tables. The feature-set is limited (<em>e.g.</em>, cells
 spanning multiple columns). At the moment, I write tables in <a href="#Raw-HTML">Raw HTML</a> or
@@ -282,15 +273,14 @@ using <a href="#Inline-Lisp">Inline Lisp</a>.
 </p>
 </div>
 </div>
-
 <div id="outline-container-Raw-HTML" class="outline-2">
 <h2 id="Raw-HTML">Raw HTML</h2>
-<div class="outline-text-2" id="text-org8fa0f8e">
+<div class="outline-text-2" id="text-org4bf1611">
 Arbitrary <button>HTML</button> can go here.
 
 <div class="org-src-container">
 <pre class="src src-org"><span style="color: #5B6268; background-color: #23272e;">#+BEGIN_EXPORT html</span>
-<span style="background-color: #23272e;">Arbitrary &lt;</span><span style="color: #c678dd; background-color: #23272e;">button</span><span style="background-color: #23272e;">&gt;HTML&lt;/</span><span style="color: #c678dd; background-color: #23272e;">button</span><span style="background-color: #23272e;">&gt; can go here.</span>
+Arbitrary &lt;button&gt;HTML&lt;/button&gt; can go here.
 <span style="color: #5B6268; background-color: #23272e;">#+END_EXPORT</span>
 </pre>
 </div>
@@ -305,10 +295,9 @@ Inline <button>HTML</button> is also possible.
 </div>
 </div>
 </div>
-
 <div id="outline-container-Scripts-Style-Meta" class="outline-2">
 <h2 id="Scripts-Style-Meta">Scripts, Style, Meta</h2>
-<div class="outline-text-2" id="text-orgf11908f">
+<div class="outline-text-2" id="text-orge5a946c">
 <p>
 Individual source files can provide additional material to include in the
 <samp>&lt;head&gt;</samp> of the exported HTML document. For example,
@@ -323,10 +312,9 @@ Individual source files can provide additional material to include in the
 </div>
 </div>
 </div>
-
 <div id="outline-container-Inline-Lisp" class="outline-2">
 <h2 id="Inline-Lisp">Inline Lisp</h2>
-<div class="outline-text-2" id="text-orga120aa3">
+<div class="outline-text-2" id="text-org849be9e">
 <p>
 We can include blocks of lisp that don&rsquo;t get rendered to HTML output (as
 syntax-highlighted <a href="#Source-Code">source code</a>), but instead define functions
@@ -384,7 +372,7 @@ and the output will be
 </div>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2024 Reilly Raab
+Copyright © 2025 Reilly Raab
 </footer>
 </body>
 </html>
