--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-12-22 Sun 15:28 -->
+<!-- 2025-01-08 Wed 15:37 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -28,24 +28,22 @@
 <a href="./about.html">Digital Résumé</a> <br>
 <a href="./site-info.html">Technical Site Info</a>
 </p>
-
 <div id="outline-container-Personal" class="outline-2">
 <h2 id="Personal">Personal</h2>
-<div class="outline-text-2" id="text-orgeffef83">
+<div class="outline-text-2" id="text-orgc7e868a">
 <p>
 <a href="./reading-list.html">Virtual Bookshelf</a> <br>
 <a href="./guitar.html">Building a Guitar</a>
 </p>
 </div>
 </div>
-
 <div id="outline-container-Technical-Notes" class="outline-2">
 <h2 id="Technical-Notes">Technical Notes</h2>
-<div class="outline-text-2" id="text-org22742b9">
+<div class="outline-text-2" id="text-org663612d">
 </div>
 <div id="outline-container-Math" class="outline-3">
 <h3 id="Math">Math</h3>
-<div class="outline-text-3" id="text-orgdf12874">
+<div class="outline-text-3" id="text-orga397117">
 <p>
 <a href="./julia.html">Julia Sets</a> <br>
 <a href="./euler-lagrange.html">Calculus of Variations</a> <br>
@@ -54,10 +52,9 @@
 </p>
 </div>
 </div>
-
 <div id="outline-container-Computing" class="outline-3">
 <h3 id="Computing">Computing</h3>
-<div class="outline-text-3" id="text-org0fe99e8">
+<div class="outline-text-3" id="text-org077f271">
 <p>
 <a href="./keyboard.html">My Keyboard Layout</a> <br>
 <a href="./demo.html">HTML Demo &amp; Reference</a>
@@ -65,14 +62,13 @@
 </div>
 </div>
 </div>
-
 <div id="outline-container-Web-Projects" class="outline-2">
 <h2 id="Web-Projects">Web Projects</h2>
-<div class="outline-text-2" id="text-org02ce84b">
+<div class="outline-text-2" id="text-orge609c11">
 </div>
 <div id="outline-container-Chess" class="outline-3">
 <h3 id="Chess">Chess</h3>
-<div class="outline-text-3" id="text-orgadba9ad">
+<div class="outline-text-3" id="text-org730ff86">
 <p>
 <a href="./chess.html">Chess</a> <br>
 <a href="./dark-chess.html">Dark Chess</a> <br>
@@ -80,10 +76,9 @@
 </p>
 </div>
 </div>
-
 <div id="outline-container-Tools" class="outline-3">
 <h3 id="Tools">Tools</h3>
-<div class="outline-text-3" id="text-org99eee34">
+<div class="outline-text-3" id="text-orgd23a567">
 <p>
 <a href="./tex.html">Live Tex to SVG, PNG</a> <br>
 <a href="./greyline.html">Greyline Map &amp; Interactive Astronomical Clock</a> <br>
@@ -91,19 +86,19 @@
 </p>
 </div>
 </div>
-
 <div id="outline-container-Math" class="outline-3">
 <h3 id="Math">Math</h3>
-<div class="outline-text-3" id="text-orgbf9b1eb">
+<div class="outline-text-3" id="text-org7cd836d">
 <p>
-<a href="./geometry.html">Geometry</a>
+<a href="./geometry.html">Geometry (Tool)</a> <br>
+<a href="./geometry-index.html">Geometry (Problem Index)</a>
 </p>
 </div>
 </div>
 </div>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2024 Reilly Raab
+Copyright © 2025 Reilly Raab
 </footer>
 </body>
 </html>
