--- a/geometry-index.html
+++ b/geometry-index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2025-01-11 Sat 19:52 -->
+<!-- 2025-01-17 Fri 17:04 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Geometric Constructions</title>
@@ -240,6 +240,17 @@ Given an angle less than <!--\pi-->
 Construct a square with the same area as a given circle.
 </p>
 </div>
+</div>
+</div>
+<div id="outline-container-Other-Resources" class="outline-2">
+<h2 id="Other-Resources">Other Resources</h2>
+<div class="outline-text-2" id="text-org1a74dcf">
+<p>
+If you find this sort of interface and set of problems engaging, you may also
+enjoy a free-to-play game called <a href="https://www.euclidea.xyz">Euclidea</a> and a
+<a href="https://sciencevsmagic.net/geo">similar web project</a> by Nico Disseldorp. I
+have no affiliation with either project.
+</p>
 </div>
 </div>
 </main>
