--- a/julia.html
+++ b/julia.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-05-17 Fri 06:08 -->
+<!-- 2025-01-17 Fri 17:05 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Julia Sets</title>
@@ -25,8 +25,8 @@
 <header>
 <h1 class="title">Julia Sets</h1>
 </header><p>
-This page includes an interactive visualization of representing sets of points
-in the complex plane. We depict a complex number <!--z-->
+This page includes an interactive visualization of sets of points in the
+complex plane. We depict a complex number <!--z-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>z</mi></mrow><annotation encoding="application/x-tex">z</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mord mathnormal" style="margin-right:0.04398em;">z</span></span></span></span> by the screen-relative
 coordinates <!--(x, y)-->
 <span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo stretchy="false">(</mo><mi>x</mi><mo separator="true">,</mo><mi>y</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(x, y)</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord mathnormal">x</span><span class="mpunct">,</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">y</span><span class="mclose">)</span></span></span></span> (i.e., rightward, upward) such that
@@ -512,7 +512,7 @@ onReady(function() {
 </script>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2024 Reilly Raab
+Copyright © 2025 Reilly Raab
 </footer>
 </body>
 </html>
