--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2025-01-08 Wed 15:37 -->
+<!-- 2025-08-04 Mon 20:57 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -30,20 +30,28 @@
 </p>
 <div id="outline-container-Personal" class="outline-2">
 <h2 id="Personal">Personal</h2>
-<div class="outline-text-2" id="text-orgc7e868a">
+<div class="outline-text-2" id="text-orgac437bd">
 <p>
 <a href="./reading-list.html">Virtual Bookshelf</a> <br>
 <a href="./guitar.html">Building a Guitar</a>
 </p>
 </div>
 </div>
+<div id="outline-container-Non-Technical" class="outline-2">
+<h2 id="Non-Technical">Non-Technical</h2>
+<div class="outline-text-2" id="text-org84fa5a5">
+<p>
+<a href="./laboring-monkeys.html">The Limit of Laboring Monkeys</a>
+</p>
+</div>
+</div>
 <div id="outline-container-Technical-Notes" class="outline-2">
 <h2 id="Technical-Notes">Technical Notes</h2>
-<div class="outline-text-2" id="text-org663612d">
+<div class="outline-text-2" id="text-orge3f335b">
 </div>
 <div id="outline-container-Math" class="outline-3">
 <h3 id="Math">Math</h3>
-<div class="outline-text-3" id="text-orga397117">
+<div class="outline-text-3" id="text-org8b532f4">
 <p>
 <a href="./julia.html">Julia Sets</a> <br>
 <a href="./euler-lagrange.html">Calculus of Variations</a> <br>
@@ -54,7 +62,7 @@
 </div>
 <div id="outline-container-Computing" class="outline-3">
 <h3 id="Computing">Computing</h3>
-<div class="outline-text-3" id="text-org077f271">
+<div class="outline-text-3" id="text-org26475fb">
 <p>
 <a href="./keyboard.html">My Keyboard Layout</a> <br>
 <a href="./demo.html">HTML Demo &amp; Reference</a>
@@ -64,11 +72,11 @@
 </div>
 <div id="outline-container-Web-Projects" class="outline-2">
 <h2 id="Web-Projects">Web Projects</h2>
-<div class="outline-text-2" id="text-orge609c11">
+<div class="outline-text-2" id="text-org2d685cd">
 </div>
 <div id="outline-container-Chess" class="outline-3">
 <h3 id="Chess">Chess</h3>
-<div class="outline-text-3" id="text-org730ff86">
+<div class="outline-text-3" id="text-orgc4ea35f">
 <p>
 <a href="./chess.html">Chess</a> <br>
 <a href="./dark-chess.html">Dark Chess</a> <br>
@@ -78,7 +86,7 @@
 </div>
 <div id="outline-container-Tools" class="outline-3">
 <h3 id="Tools">Tools</h3>
-<div class="outline-text-3" id="text-orgd23a567">
+<div class="outline-text-3" id="text-orgc94d35d">
 <p>
 <a href="./tex.html">Live Tex to SVG, PNG</a> <br>
 <a href="./greyline.html">Greyline Map &amp; Interactive Astronomical Clock</a> <br>
@@ -88,7 +96,7 @@
 </div>
 <div id="outline-container-Math" class="outline-3">
 <h3 id="Math">Math</h3>
-<div class="outline-text-3" id="text-org7cd836d">
+<div class="outline-text-3" id="text-orgdafbb0c">
 <p>
 <a href="./geometry.html">Geometry (Tool)</a> <br>
 <a href="./geometry-index.html">Geometry (Problem Index)</a>
