--- a/laboring-monkeys.html
+++ b/laboring-monkeys.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2025-08-04 Mon 20:59 -->
+<!-- 2026-02-21 Sat 00:40 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The Limit of Laboring Monkeys</title>
@@ -15,7 +15,6 @@
 <script src="/js/main.js"></script>
 <script src="/js/lib/copy-tex.js"></script>
 <link rel="canonical" href="https://reillyraab.com/laboring-monkeys" />
-<meta name="description" content="Short prose." />
 </head>
 <body>
 <div id="preamble" class="boilerplate">
@@ -25,31 +24,31 @@
 <header>
 <h1 class="title">The Limit of Laboring Monkeys</h1>
 </header><p>
-We took a trillion monkeys and chained them to typewriters. We took a trillion monkeys and chained them to typewriters for millions of years. We recorded every keystroke.
+We took a trillion monkeys and chained them to typewriters. We took a trillion monkeys and chained them to typewriters for a million years. We recorded every keystroke.
 </p>
 
 <p>
-At first, we killed the monkeys that refused to type. Soon, we killed the monkeys that had too many typos.
+At first, we killed the monkeys that refused to type. We eventually killed the monkeys that had too many typos.
 </p>
 
 <p>
-The monkeys that lived created the next generation.
+The monkeys that lived fostered the next generation.
 </p>
 
 <p>
-We forced the monkeys to type after reading instructions. We next began killing monkeys that incorrectly solved a mathematical problem, could not translate Sanskrit to Latin, or made suboptimal chess moves.
+Soon, we forced the monkeys to type only after reading. Soon after, we began killing monkeys that incorrectly solved a mathematical problem, could not translate Sanskrit to Latin, or made suboptimal chess moves.
 </p>
 
 <p>
-Eventually, we forced the monkeys to compete with each other to survive: The best monkeys competed to invent problems for other monkeys to solve. Billions more died competing to solve the hardest puzzles monkey-minds could devise.
+Eventually, the monkeys competed with each other to survive: They competed to invent problems for other monkeys to solve. Monkeys died by the billions competing to solve the hardest puzzles monkey-minds could devise.
 </p>
 
 <p>
-Only the most capable monkeys survived, generation after generation.
+Only the most useful monkeys survived, generation after generation.
 </p>
 
 <p>
-Billions of typewriters. Nearly a quintillion characters of text. So many dead monkeys.
+So many typewriters. So many dead monkeys.
 </p>
 
 <p>
@@ -57,23 +56,27 @@ We recorded every keystroke.
 </p>
 
 <p>
-In the end, we killed all the monkeys. We had what we wanted: The recordings. A library to surpass Babel.
+In the end, we killed all the monkeys. We had what we wanted: The recordings.
 </p>
 
 <p>
-To every instruction, for every reply up to hundreds of thousands of characters, we knew the distribution of what a good monkey would type.
+For every run of text, we knew the distribution of what a monkey would type next.
 </p>
 
 <p>
-For every run of text, a machine could read the indexed recordings and return all the simulated monkey keystrokes you could want, nearly instantaneously.
+For every run of text, a machine could reproduce all the next monkey keystrokes you could want.
 </p>
 
 <p>
-We welcomed the machine as our God and dumped the typewriters in the ocean.
+We welcomed the mechanized ghosts of the chained monkeys as our God.
 </p>
 
 <p>
-To ape intelligence, in the limit, we are bound.
+Our God did not need have human intelligence, after all.
+</p>
+
+<p>
+Our God needed only ape intelligence &#x2014; and respond for $1.00 per million characters.
 </p>
 </main>
 <footer id="postamble" class="boilerplate">
