bed-time-for-patriots

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2025-08-04 Mon 20:57 -->
+<!-- 2026-02-21 Sat 17:58 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Reilly Raab</title>
@@ -30,7 +30,7 @@
 </p>
 <div id="outline-container-Personal" class="outline-2">
 <h2 id="Personal">Personal</h2>
-<div class="outline-text-2" id="text-orgac437bd">
+<div class="outline-text-2" id="text-org29aabd2">
 <p>
 <a href="./reading-list.html">Virtual Bookshelf</a> <br>
 <a href="./guitar.html">Building a Guitar</a>
@@ -39,19 +39,21 @@
 </div>
 <div id="outline-container-Non-Technical" class="outline-2">
 <h2 id="Non-Technical">Non-Technical</h2>
-<div class="outline-text-2" id="text-org84fa5a5">
+<div class="outline-text-2" id="text-org213a47e">
 <p>
-<a href="./laboring-monkeys.html">The Limit of Laboring Monkeys</a>
+<a href="./laboring-monkeys.html">The Limit of Laboring Monkeys</a> <br>
+<a href="./topaz-earring.html">The Topaz Earring</a> <br>
+<a href="./bed-time-for-patriots.html">Bed-Time for Patriots</a>
 </p>
 </div>
 </div>
 <div id="outline-container-Technical-Notes" class="outline-2">
 <h2 id="Technical-Notes">Technical Notes</h2>
-<div class="outline-text-2" id="text-orge3f335b">
+<div class="outline-text-2" id="text-org8088edf">
 </div>
 <div id="outline-container-Math" class="outline-3">
 <h3 id="Math">Math</h3>
-<div class="outline-text-3" id="text-org8b532f4">
+<div class="outline-text-3" id="text-orgfbf1f56">
 <p>
 <a href="./julia.html">Julia Sets</a> <br>
 <a href="./euler-lagrange.html">Calculus of Variations</a> <br>
@@ -62,7 +64,7 @@
 </div>
 <div id="outline-container-Computing" class="outline-3">
 <h3 id="Computing">Computing</h3>
-<div class="outline-text-3" id="text-org26475fb">
+<div class="outline-text-3" id="text-org4ca23a8">
 <p>
 <a href="./keyboard.html">My Keyboard Layout</a> <br>
 <a href="./demo.html">HTML Demo &amp; Reference</a>
@@ -72,11 +74,11 @@
 </div>
 <div id="outline-container-Web-Projects" class="outline-2">
 <h2 id="Web-Projects">Web Projects</h2>
-<div class="outline-text-2" id="text-org2d685cd">
+<div class="outline-text-2" id="text-org326f88e">
 </div>
 <div id="outline-container-Chess" class="outline-3">
 <h3 id="Chess">Chess</h3>
-<div class="outline-text-3" id="text-orgc4ea35f">
+<div class="outline-text-3" id="text-org7ffda56">
 <p>
 <a href="./chess.html">Chess</a> <br>
 <a href="./dark-chess.html">Dark Chess</a> <br>
@@ -86,7 +88,7 @@
 </div>
 <div id="outline-container-Tools" class="outline-3">
 <h3 id="Tools">Tools</h3>
-<div class="outline-text-3" id="text-orgc94d35d">
+<div class="outline-text-3" id="text-orgb341d89">
 <p>
 <a href="./tex.html">Live Tex to SVG, PNG</a> <br>
 <a href="./greyline.html">Greyline Map &amp; Interactive Astronomical Clock</a> <br>
@@ -96,7 +98,7 @@
 </div>
 <div id="outline-container-Math" class="outline-3">
 <h3 id="Math">Math</h3>
-<div class="outline-text-3" id="text-orgdafbb0c">
+<div class="outline-text-3" id="text-org22355e4">
 <p>
 <a href="./geometry.html">Geometry (Tool)</a> <br>
 <a href="./geometry-index.html">Geometry (Problem Index)</a>
@@ -106,7 +108,7 @@
 </div>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2025 Reilly Raab
+Copyright © 2026 Reilly Raab
 </footer>
 </body>
 </html>
