--- a/topaz-earring.html
+++ b/topaz-earring.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2026-02-21 Sat 00:56 -->
+<!-- 2026-02-21 Sat 18:17 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>The Topaz Earring</title>
@@ -61,7 +61,7 @@ though the young woman did not always understand how.
 <p>
 Years passed, and the earring, always worn, was indeed, never wrong. 
 The woman grew handsome in age, and to her friends and family, very wise.
-Her life was rich, comfortable, and succesful beyond her wildest dreams.
+Her life was rich, comfortable, and successful beyond her wildest dreams.
 But dreams she no longer remembered, if she still dreamt.
 </p>
 
@@ -73,7 +73,7 @@ But she had never told a lie, for the earring was never wrong, and she trusted i
 </p>
 </main>
 <footer id="postamble" class="boilerplate">
-Copyright © 2025 Reilly Raab
+Copyright © 2026 Reilly Raab
 </footer>
 </body>
 </html>
